--- a/html/post.html
+++ b/html/post.html
@@ -35,7 +35,7 @@
         <div class= "foot">
             <p>Hopefully these graphs will be useful to understanding my mastery of Tableau</p>
             <div class="backtotop"><a href="#top">Back to Top</a> </div>
-           <p><div class="backtotop blue">Copyright &copy; Your Website 2021</p></div>
+           <p><div class="backtotop blue">Copyright &copy; Sam Schulthies 2022</p></div>
         </div>
         
     </footer>
